Adding Transparency + prototype object

--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
       <span><a id="input-spectrum-bg-link" class="color_link" target="_new" href="https://www.google.com">BG</a> <input
           type="text" id="input-spectrum-bg" /></span>
     </div>
+    &nbsp; &nbsp; Transparent indicates the terminal's default color
     <span class="flex_space"></span>
     <span class="flex_space"></span>
     <button id="button-element-delete-all" title="Delete all elements.">Delete All</button>
